# Grinta-Coding-Agent

./: .coveragerc  .dockerignore  .env.template  .gitattributes  .gitignore  .hintrc  .null  .pre-commit-config.yaml  .precommit_mypy_latest.txt  .prettierignore  .pylintrc  .pytest-hang-debug.txt  .pytest-timeout-run.txt  .pytest-unit-final.txt  .pytest-unit-final2.txt  .pytest-unit-result.txt  .pytest-verify-postfix.txt  .pytest_cli_frontend_output.txt  00-the-meaning-of-grinta.md  01-the-saas-fortress.md  02-the-killed-darlings.md  03-the-architectural-gauntlet.md  04-the-context-war.md  05-the-giants-playbook.md  06-the-system-design-playbook.md  07-the-road-ahead.md  08-the-first-fixed-issue.md  09-the-3am-decisions.md  10-model-agnostic-reckoning.md  11-the-console-wars.md  12-open-source-was-the-better-business.md  13-the-hidden-playbooks.md  14-the-verification-tax.md  15-prompts-are-programs.md  16-the-death-of-apply-patch.md  17-the-pragmatic-stack.md  18-the-mind-of-the-agent.md  19-surviving-the-crash.md  20-circuit-breakers-and-hallucinations.md  21-the-safety-sandbox-is-not-optional.md  (+198 more)
.Forge/: active_plan.json  agent_notes.json  checkpoints.json  pre_condensation_snapshot.json  reliability-gate-full-after-next-slice.json  reliability-gate-full-after-phase2.json  reliability-gate-full.json  reliability-gate-release1.json
.app/: active_plan.json  pre_condensation_snapshot.json  reliability-gate-full-after-phase2.json  reliability-gate-full.json
.devcontainer/: devcontainer.json  post-create.sh  setup.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_template.yml  config.yml  feature_request.md  product_feedback.yml  rc_feedback.yml
.github/scripts/: check_distribution_contents.py  check_repository_hygiene.py  check_version_consistency.py  check_workflow_config_consistency.py  update_pr_description.sh  verify_release_tag.py
.github/workflows/: README.md  app-resolver.yml  bandit.yml  clean-up.yml  codeql.yml  dependency-review.yml  e2e-tests.yml  ghcr-build.yml  integration-runner.yml  lint-fix.yml  lint.yml  pip-audit.yml  py-tests.yml  pypi-release.yml  release-drafter.yml  run-eval.yml  smoke-install.yml  stale.yml  vscode-extension-build.yml  welcome-good-first-issue.yml
.grinta/: active_plan.json  pre_condensation_snapshot.json
.kilo/plans/: 1778859113502-neon-tiger.md  1778971020972-stellar-cactus.md
.rigour/: events.jsonl
.scripts/: check_doc_first_line.py  inspect_docstrings.py
.tmp_cli_manual/: cli_exit_test_utf8.txt  cli_slash_test.txt  cli_slash_test_after_fallback.txt  live_driver_external_workspace_after_fix.txt  live_driver_external_workspace_daily_driver.txt  live_driver_external_workspace_interactive.txt  live_driver_external_workspace_output.txt  live_driver_gemini_output.txt  live_driver_output.txt  live_driver_output_after_cooldown.txt  live_driver_repo_query_output.txt  live_driver_summary_output.txt  proc_exit_stderr.txt  proc_exit_stdout.txt  proc_exit_stdout_final.txt  proc_prompt_stdout_final.txt  slash_input_after_fallback.txt  slash_stdout.txt  smoke_stdout.txt
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
_chess_e2e_output/: chess.js  index.html  styles.css
backend/: README.md  README_APP.md  README_FORGE.md  README_GRINTA.md  __init__.py  _canonical.py  architecture_reliability_report.md  conftest.py  embedded.py  validate_imports.py
backend/.app/: .gitignore
backend/.grinta/: .gitignore  project_memory.md
backend/adapters/: __init__.py  cli_input.py  json.py
backend/api/: README.md  __main__.py  app.py  app_accessors.py  app_state.py  dependencies.py  error_handlers.py  file_config.py  files.py  graceful_shutdown.py  listen.py  listen_socket.py  middleware_core.py  monitoring.py  otel_config.py  provider_handler.py  route_dependencies.py  route_registry.py  settings.py  shared.py  socket_auth.py  socket_params.py  socket_replay.py  socketio_asgi_app.py  socketio_connection_params.py  socketio_event_handlers.py  versioning.py  (+1 more)
client/: __init__.py  client.py
docs/: ADR.md  ARCHITECTURE.md  AUTH.md  CI.md  CLI_MODULE_MAP.md  CLI_THEME_CONTRACT.md  CODE_REVIEW.md  CONTRIBUTOR_MAP.md  DEMO_SCRIPT.md  DEVELOPER.md  ENGINES.md  FRESH_MACHINE_ONBOARDING.md  GRINTA_RENAME_PLAN.md  INFERENCE_AND_INTEGRATIONS.md  INSTALL.md  MANUAL_RELEASE_ACTIONS.md  MCP_EXAMPLES.md  PERFORMANCE.md  PLUGIN_GUIDE.md  PROMOTION.md  QUICK_START.md  README.md  REFACTOR_BASELINE.md  REGRESSION_TESTS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.0.0-rc1.md  RELEASE_NOTES_v1.0.0.md  RELIABILITY.md  RELIABILITY_AUDIT_CHECKLIST.md  SECURITY_CHECKLIST.md  SETTINGS.md  SUPPORT_MATRIX.md  TROUBLESHOOTING.md  TWO_MODE_FILE_EDITING.md  USER_GUIDE.md  VOCABULARY.md  WINDOWS_AND_WSL.md
examples/: README.md  debug_target.py
forge_client/: __init__.py  client.py
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
grinta_launch/: __init__.py  entry.py
grinta_raft_devcut/: concat.txt  title_filter.txt
launch/: __init__.py  entry.py
logs/: README.md  server_err.txt  server_out.txt
packaging/: vulture_whitelist.py
raftkv/: __init__.py  messages.py
scripts/: Dockerfile.smoke  README.md  _splice_observation_handler.py  bootstrap_env.py  check_contributor_bootstrap.sh  chess_e2e_verify.py  discover_public_imports.py  final_live_test.py  final_live_test_ambiguous.py  fix_editor.py  headless_swe_tests.py  live_manual_test.py  live_server_direct_eval.py  manual_test.py  measure_tokens.py  probe_llm_settings.py  render_session_log.py  run_all_in_one.py  run_eval_clean.py  run_live_eval.py  run_live_eval_v2.py  run_real_task.py  score_agent_eval_pack.py  smoke_install.ps1  smoke_install.sh  smoke_source_onboarding.ps1  smoke_source_onboarding.sh  strip_session_log.py  test_agent_via_sockets.py  test_aggregator_task.py  test_headless.py  test_nvidia_kimi.py  test_provider_connection.py  test_swe_tasks.py  test_vercel_gateway.py
tui/: __init__.py  __main__.py  app.py  client.py
(+27736 files in other folders)
