[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "grinta-ai"
version = "0.55.0"
description = "Grinta: Your AI-Powered Development Platform"
readme = "README.md"
license = "MIT"
authors = [ { name = "Grinta Team" } ]
requires-python = ">=3.12,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiohttp>=3.9,!=3.11.13",
  "anthropic>=0.40,<1",
  "anyio>=4.9,<5",
  "bashlex>=0.18,<0.19",
  "diff-match-patch>=20241021,<20260000",
  "fastapi>=0.115,<1",
  "fastmcp>=2.13,<3",
  "google-genai>=0.1",
  "websockets>=15.0.1,<16",
  "html2text>=2025.4.15,<2026",
  "httpx>=0.27,<1",
  "json-repair>=0.48,<1",
  "orjson>=3.10,<4",
  "libtmux>=0.37,<0.40",
  "mcp>=1.10,<2",
  "openai>=1.40,<3",
  "pillow>=11.3,<13",
  "psutil>=7,<8",
  "python-dotenv>=1.1.1,<2",
  "python-frontmatter>=1.1,<2",
  "python-json-logger>=3.2.1,<4",
  "python-multipart>=0.0.20,<1",
  "python-socketio>=5.14,<6",
  "rapidfuzz>=3.9,<4",
  "starlette>=0.49.1,<0.50",
  "tenacity>=8.5,<10",
  "termcolor>=3.1,<4",
  "tree-sitter>=0.24,<0.25",
  "tree-sitter-language-pack>=0.7.3,<0.8",
  "uvicorn>=0.30,<1",
  "whatthepatch>=1.0.6,<2",
  "chromadb>=1.4,<2",
  "sentence-transformers>=5.2,<6",
  "einops>=0.8,<1",
  "python-docx>=1.1,<2",
  "PyPDF2>=3.0,<4",
  "python-pptx>=1.0,<2",
  "pylatexenc>=2.10,<3",
  "opencv-python>=4.11,<5",
  "puremagic (>=1.30,<2.0)",
  "binaryornot (>=0.4.4,<0.5.0)",
  "memory-profiler (>=0.61.0,<0.62.0)",
  "tomli-w>=1.1.0,<2",
  "aiofiles>=25.1.0",
  "rich>=14.0,<15",
  "prompt_toolkit>=3.0.50,<4",
  "optimum[onnxruntime]>=2.1.0",
  "pyfiglet>=1.0.4",
  "ripgrep==14.1.0",
]

urls = { Repository = "https://github.com/josephsenior/Grinta-Agent", Issues = "https://github.com/josephsenior/Grinta-Agent/issues", Discussions = "https://github.com/josephsenior/Grinta-Agent/discussions" }
# Console script disabled — Windows Application Control blocks pip-generated
# .exe launchers.  Use the grinta.cmd wrapper in Scripts/ instead, or run
# directly: python -m backend.cli.entry

[tool.hatch.build.targets.wheel]
packages = [
  "backend",
  "client",
  "launch",
  "grinta_launch",
]

[tool.hatch.build.targets.wheel.force-include]
"backend/playbooks" = "backend/playbooks"

[dependency-groups]
dev = [
  "ruff==0.12.5",
  "pylint>=4.0.5,<5",
  "mypy==1.17.0",
  "pre-commit==4.2.0",
  "build>=1.2.2",
  "types-setuptools>=80.9.0.20250529",
  "pytest>=8.4.0",
  "grpcio>=1.70.0",
  "grpcio-tools>=1.70.0",
  "bandit>=1.9.3",
  "types-requests>=2.32.4.20260107",
]
test = [
  "pytest>=8.4.0",
  "pytest-cov>=4.1.0,<7.0.0",
  "pytest-asyncio>=0.21.1,<1.0.0",
  "pytest-xdist>=3.8.0,<4.0.0",
  "pytest-timeout>=2.4.0",
  "requests>=2.32.4,<3",
]

runtime = []

browser = [
  "browser-use>=0.12,<0.15",
]

[tool.hatch.version]
path = "backend/__init__.py"

[tool.ruff]
format.quote-style = "single"
lint.select = [
  "ASYNC",
  "B",
  "D",
  "E",
  "F",
  "I",
  "Q",
  "UP006", # Use `list` instead of `List` for annotations
  "UP007", # Use `X | Y` instead of `Union[X, Y]`
  "UP008", # Use `X | None` instead of `Optional[X]`
  "W",
]
lint.ignore = [
  "B003",
  "B007",
  "B009",
  "B010",
  "B018",
  "B904",
  "D1",       # Ignore warnings for missing docstrings
  "E501",
]
lint.flake8-bugbear.extend-immutable-calls = [ "Depends", "fastapi.Depends", "fastapi.params.Depends" ]
lint.flake8-quotes.docstring-quotes = "double"
lint.flake8-quotes.inline-quotes = "single"
lint.pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = [
  "ASYNC",
  "B017",
  "B028",
  "D205",
  "D301",
  "D417",
  "E402",
  "F841",
]
"backend/scripts/**" = ["ASYNC"]
"backend/cli/config_manager.py" = ["E402"]
"backend/cli/event_renderer.py" = ["E402"]
"backend/cli/repl.py" = ["E402"]
"backend/integrations/mcp/mcp_utils.py" = ["E402"]
"backend/persistence/data_models/settings.py" = ["E402"]

[tool.coverage.run]
source = [
  "backend",
  "client",
]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 95

[tool.bandit]
# Security scanning configuration
# B101: assert used — acceptable in tests and internal assertions
# B110: try/except/pass — used intentionally for graceful degradation
# B404: import subprocess — needed for runtime command execution
# B603: subprocess call — controlled by SecurityAnalyzer
# B607: partial path — acceptable for tool invocations
skips = ["B101", "B110", "B404", "B603", "B607"]
exclude_dirs = ["backend/tests"]

# Use a project-local environment only: run `uv sync` in this repo, then `uv run …`.
# Avoid `pip install` into the global Python alongside unrelated agent stacks; that causes resolver conflicts.
[tool.uv]
constraint-dependencies = ["transformers<4.47.0"]
